--- a/index.html
+++ b/index.html
@@ -410,19 +410,14 @@
 
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
             style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
-            <a href="https://github.com/DilaAyuPrastita/Tubes_Machine_Learning" target="_blank" rel="noreferrer"><img
-                style="padding:5px 5px;" src="assets/img/projects/tubes_ml.jpg" class="img-fluid" width="324"
-                height="324"></a>
-            <a href="https://github.com/DilaAyuPrastita/Tubes_Machine_Learning" target="_blank" rel="noreferrer">
-              <h5 style="padding:5px 5px;color:#23d7ff"><strong>Machine Learning Engineer &#8209; Sentiment
-                  Analysis</strong></h5>
+            <a href="https://github.com/DilaAyuPrastita/Klasifikasi-dan-Prediksi-Berita/tree/main" target="_blank"
+              rel="noreferrer"><img style="padding:5px 5px;" src="assets/img/projects/bbc.jpg" class="img-fluid"
+                width="324" height="324"></a>
+            <a href="https://github.com/DilaAyuPrastita/Klasifikasi-dan-Prediksi-Berita/tree/main" target="_blank" rel="noreferrer">
+              <h5 style="padding:5px 5px;color:#23d7ff"><strong>Machine Learning Engineer &#8209; Classification and
+                  prediction of British Broadcasting Corporation (BBC) News Categories</strong></h5>
             </a>
-            <p style="padding:0px 2px;color:#fff;">My team and I conducted sentiment analysis on the Pocket ITERA app, a
-              student platform at the Sumatra Institute of Technology (ITERA) offering services like attendance,
-              helpdesk, and e-counseling. Using NLP and Naive Bayes, I analyzed Google Playstore reviews to classify
-              feedback into positive and negative sentiments, highlighting the app's strengths and areas for
-              improvement. The results were visualized to provide actionable insights, helping developers enhance the
-              app's quality and user experience.</p>
+            <p style="padding:0px 2px;color:#fff;">My team and I developed a BBC news classification model, applying Natural Language Processing (NLP) techniques to compare Recurrent Neural Network (RNN) and Naive Bayes Classifier for category prediction. Using TF-IDF for text representation and SVD for dimensionality reduction, we analyzed sequential relationships (RNN) and probabilistic patterns (Naive Bayes). This project highlights the effectiveness of NLP-based algorithms for automatic text classification, specifically on the BBC news dataset.</p>
           </div>
 
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
@@ -443,6 +438,23 @@
 
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
             style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
+            <a href="https://github.com/DilaAyuPrastita/Tubes_Machine_Learning" target="_blank" rel="noreferrer"><img
+                style="padding:5px 5px;" src="assets/img/projects/tubes_ml.jpg" class="img-fluid" width="324"
+                height="324"></a>
+            <a href="https://github.com/DilaAyuPrastita/Tubes_Machine_Learning" target="_blank" rel="noreferrer">
+              <h5 style="padding:5px 5px;color:#23d7ff"><strong>Machine Learning Engineer &#8209; Sentiment
+                  Analysis</strong></h5>
+            </a>
+            <p style="padding:0px 2px;color:#fff;">My team and I conducted sentiment analysis on the Pocket ITERA app, a
+              student platform at the Sumatra Institute of Technology (ITERA) offering services like attendance,
+              helpdesk, and e-counseling. Using NLP and Naive Bayes, I analyzed Google Playstore reviews to classify
+              feedback into positive and negative sentiments, highlighting the app's strengths and areas for
+              improvement. The results were visualized to provide actionable insights, helping developers enhance the
+              app's quality and user experience.</p>
+          </div>
+
+          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
+            style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
             <a href="https://github.com/DilaAyuPrastita/cnn-vegetable-classification" target="_blank"
               rel="noreferrer"><img style="padding:5px 5px;" src="assets/img/projects/tubes_pcd.jpg" class="img-fluid"
                 width="324" height="324"></a>
@@ -456,6 +468,8 @@
               Xception, VGG16). The dataset consisted of 400 images sourced from Kaggle, ensuring the model's ability to
               accurately recognize and classify vegetable types.</p>
           </div>
+
+          
         </div>
       </div>
     </div>
